--- a/app/package.json
+++ b/app/package.json
@@ -30,5 +30,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sanity/client": "^6.21.3",
+		"sanity": "^3.55.0"
+	}
 }
